fix(mobile): dropdown items should have enough padding on mobile to make it easy for the user to tap on them

--- a/src/components/topbar/topbar.module.css
+++ b/src/components/topbar/topbar.module.css
@@ -46,6 +46,13 @@
   display: block;
 }
 
+@media (max-width: 640px) {
+  .dropdownItem {
+    padding-bottom: 5px;
+    padding-top: 5px;
+  }
+}
+
 .dropdownItem:hover {
   background-color: var(--background-primary);
 }
